--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 	<div class="ele">
 		<b>Details of the faculty that will be provided by them are as follows:</b>
 		<ol>
-			<li>Teacher Name</li>
+			<li style = "display: list-item;">Teacher Name</li>
 			<li>DOB (Date of Birth)</li>
 			<li>Address</li>
 			<li>Qualifications</li>
