--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 	<br>
 	<div class="ele">
 		<b>Details of the faculty that will be provided by them are as follows:</b>
-		<ol>
-			<li style = "display: list-item;">Teacher Name</li>
+		<ul>
+			<li>Teacher Name</li>
 			<li>DOB (Date of Birth)</li>
 			<li>Address</li>
 			<li>Qualifications</li>
@@ -94,12 +94,12 @@
 			<li>Phone No.</li>
 			<li>Email ID</li>
 			<li>Blood Group</li>
-		</ol>
+		</ul>
 		<br>
 		<i>Additional Details will be added to the Database at a later stage along with the given details by the faculty/staff.</i>
 		<br>
 		<b>They are Namely:</b>
-		<ol>
+		<ul>
 			<li>Department</li>
 			<li>Teacher ID (Unique)</li>
 			<li>Courses or Subjects to be taken (Could be multiple) (Subject code will be given)</li>
@@ -107,10 +107,10 @@
 			<li>Post (Position) Eg: Associate Professor</li>
 			<li>Desk No. (Unique)</li>
 			<li>DOJ (Date of Joining)</li>
-		</ol>
+		</ul>
 		<br>
 		<b>Details of the students that will be provided by them are as follows:</b>
-		<ol>
+		<ul>
 			<li>Student Name</li>
 			<li>DOB (Date of Birth)</li>
 			<li>Address</li>
@@ -122,17 +122,17 @@
 			<li>Religion</li>
 			<li>Caste (If applicable)</li>
 			<li>Vaccination Details (Boolean)</li>
-		</ol>
+		</ul>
 		<br>
 		<i>Additional Details will be added to the Database at a later stage along with the given details by the students.</i>
 		<br>
 		<b>They are namely:</b>
-		<ol>
+		<ul>
 			<li>Reg No.</li>
 			<li>Room No.</li>
 			<li>Cupboard No.</li>
 			<li>Room Leader (Boolean)</li>
-		</ol>
+		</ul>
 		<br>
 		<i>The following data will be residing (a few more attributes could be added at a later stage) in the Database for MDH Campus and can be used to view about the details of each teacher and student.</i>
 	</div>
