Edit for Final (Part1)

--- a/login.html
+++ b/login.html
@@ -16,17 +16,9 @@
 </head>
 <body>
     <header id="home">
-		<span style="font-size: 30px;cursor: pointer;" onclick="openNav()">&#9776;</span>
-		<a href="login">Login</a>
+		<a href="/">SSSIHL MDH</a>
 	</header>
 	<input type="image" id="dark" src="/Images/circle-half-stroke-solid.png" onclick="myFunction()">
-	<div id="sidenavbar" class="sidenavbar">
-		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a> 
-		<a href="/">Home</a>
-		<a href="#ab">About</a>
-		<a href="#p">Problem Statement</a>
-		<a href="#con">Contact</a>
-	</div>
     <div id="main">
         <h1>LOGIN</h1>
             <center>
