--- a/home.html
+++ b/home.html
@@ -20,7 +20,14 @@
 <body>
 	<header id="home">
 		<span style="font-size: 30px;cursor: pointer;" onclick="openNav()">&#9776;</span>
-		<a href="login">Login</a>
+		<div class="dropdown">
+			<button class="dropbtn">User</button>
+			<div class="dropdown-content">
+			  <a href="#">Link 1</a>
+			  <a href="#">Link 2</a>
+			  <a href="#">Link 3</a>
+			</div>
+		  </div>
 	</header>
 	<input type="image" id="dark" src="/Images/circle-half-stroke-solid.png" onclick="myFunction()">
 	<div id="sidenavbar" class="sidenavbar">
